...
                            <subviews>
                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="36y-Jb-0Jf" userLabel="vParent">
                                    <rect key="frame" x="25" y="88" width="364" height="628"/>
                                    <subviews>
                                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="JPr-Ky-vhL" userLabel="tfHabit" customClass="SMFloatingTextField" customModule="MyGoal" customModuleProvider="target">
                                            <rect key="frame" x="20" y="90" width="324" height="50"/>
                                            <accessibility key="accessibilityConfiguration" label="Habit name"/>
                                            <constraints>
                                                <constraint firstAttribute="height" constant="50" id="LA3-lr-vMY"/>
                                            </constraints>
                                            <nil key="textColor"/>
                                            <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="18"/>
                                            <textInputTraits key="textInputTraits" returnKeyType="next"/>
                                        </textField>
                                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xnx-48-fwm" userLabel="tfQuestion" customClass="SMFloatingTextField" customModule="MyGoal" customModuleProvider="target">
                                            <rect key="frame" x="20" y="180" width="324" height="50"/>
                                            <accessibility key="accessibilityConfiguration" label="Habit question"/>
                                            <constraints>
                                                <constraint firstAttribute="height" constant="50" id="zuT-zA-RUi"/>
                                            </constraints>
                                            <nil key="textColor"/>
                                            <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="18"/>
                                            <textInputTraits key="textInputTraits" returnKeyType="done"/>
                                        </textField>
                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xGb-BO-LfV" userLabel="btSave">
                                            <rect key="frame" x="57" y="479" width="110" height="49"/>
                                            <color key="backgroundColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                            <accessibility key="accessibilityConfiguration" label="Save"/>
                                            <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="16"/>
                                            <inset key="contentEdgeInsets" minX="5" minY="15" maxX="5" maxY="15"/>
                                            <state key="normal" title="СОХРАНИТЬ">
                                                <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                            </state>
                                            <connections>
...
                                    <nil key="textColor"/>
                                    <nil key="highlightedColor"/>
                                </label>
                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hiq-gy-pJQ" userLabel="btCategory">
                                    <rect key="frame" x="10" y="40" width="70" height="70"/>
                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                    <accessibility key="accessibilityConfiguration" label="Choose category"/>
                                    <constraints>
                                        <constraint firstAttribute="width" constant="70" id="IcY-53-JjT"/>
                                        <constraint firstAttribute="height" constant="70" id="hPP-sr-6ze"/>
                                    </constraints>
                                    <state key="normal" image="icon_arts"/>
                                    <connections>
...
